# blastpack

./: .gitignore  README.md  pyproject.toml
blastpack/: __init__.py  cli.py  closure.py  diff.py  lib.py  loader.py  metrics.py  oracle.py  ordering.py  pack.py  rle.py
docs/: edge-support.md  sample-data-validation.md
examples/: score_frontier_demo.py
examples/sample_data/: certtemplates.json  computers.json  domains.json  gpos.json  groups.json  ous.json  users.json
scripts/: verify_sample_data.py
tests/: test_cli_build_info.py  test_cli_diff.py  test_cli_json.py  test_cli_query.py  test_cli_top.py  test_closure.py  test_coverage.py  test_diff.py  test_lib.py  test_loader.py  test_metrics.py  test_oracle.py  test_ordering.py  test_pack.py  test_pack_validation.py  test_rle.py  test_scale_guard.py  test_wording.py
tests/fixtures/essos_like/: computers.json  domains.json  groups.json  users.json
